Added images and styles.

--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Javin's CompCamp Website!</title>
+    <link rel="stylesheet" href="css/styles.css"
   </head>
   <body>
-    <h1>Javin's Dank Website.</h1>
+    <img src="images/banner.png" alt="Javin's banner" class="imagecenter"/>
+    <h1 class="center">Javin's Compcamp Website.</h1>
 
   </body>
 </html>
