--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <img src="images/banner.png" alt="Javin's banner" class="imagecenter"/>
-    <img src="images/Homebanner.png" alt="Home banner" class="homebanner imagecenter"/>
+    <img src="images/Projectsbanner.png" alt="Project Banner" class="projectsbanner imagecenter"/>
+
     <div class"nav">
       <ul>
         <li><a href="index.html"> <img src="images/Homebutton.png"/> </a></li>
