Add horizontal links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title>Javin's CompCamp Website!</title>
     <link rel="stylesheet" href="css/styles.css"
   </head>
+  <style>
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    display: inline;
+  }
+  </style>
   <body>
     <img src="images/banner.png" alt="Javin's banner" class="imagecenter"/>
     <img src="images/Homebanner.png" alt="Home banner" class="homebanner imagecenter"/>
