--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,19 @@
     <title>Javin's CompCamp Website!</title>
     <link rel="stylesheet" href="css/styles.css"
   </head>
+  <style>
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    display: inline;
+  }
+  </style>
   <body>
     <img src="images/banner.png" alt="Javin's banner" class="imagecenter"/>
     <img src="images/Projectsbanner.png" alt="Project Banner" class="projectsbanner imagecenter"/>
-
     <div class"nav">
       <ul>
         <li><a href="index.html"> <img src="images/Homebutton.png"/> </a></li>
