updated projects and styles.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <img src="images/banner.png" alt="Javin's banner" class="imagecenter"/>
     <img src="images/Homebanner.png" alt="Home banner" class="homebanner imagecenter"/>
     <div class"nav">
+      <div class="wrapper">
       <ul>
         <li><a href="index.html"> <img src="images/Homebutton.png"/> </a></li>
         <li><a href="projects.html"> <img src="images/projectbutton.png"/> </a></li>
         <li><a href="https://compcamps.com"> <img src="images/Compcampsbutton.png" </a></li>
       </ul>
+    </div>
     </div>
   </body>
   <body background="images/spacebackground.png">
