--- a/projects.html
+++ b/projects.html
@@ -19,10 +19,12 @@
     <img src="images/banner.png" alt="Javin's banner" class="imagecenter"/>
     <img src="images/Projectsbanner.png" alt="Project Banner" class="projectsbanner imagecenter"/>
     <div class"nav">
+      <div class="wrapper">
       <ul>
         <li><a href="index.html"> <img src="images/Homebutton.png"/> </a></li>
         <li><a href="projects.html"> <img src="images/projectbutton.png"/> </a></li>
         <li><a href="https://compcamps.com"> <img src="images/Compcampsbutton.png" </a></li>
+      </div>
       </ul>
     </div>
   </body>
