--- a/projects.html
+++ b/projects.html
@@ -24,9 +24,12 @@
         <li><a href="index.html"> <img src="images/Homebutton.png"/> </a></li>
         <li><a href="projects.html"> <img src="images/projectbutton.png"/> </a></li>
         <li><a href="https://compcamps.com"> <img src="images/Compcampsbutton.png" </a></li>
-      </div>
       </ul>
-    </div>
+      </div>
+      </div>
+      <div>
+        <p>Testing.</p>
+      </div>
   </body>
   <body background="images/spacebackground.png">
 </html>
