Scroll down for my projects

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
         <li><a href="projects.html"> <img src="images/projectbutton.png"/> </a></li>
         <li><a href="https://compcamps.com"> <img src="images/Compcampsbutton.png" </a></li>
         <img src="images/whaticreated.png" alt="What I created" class="imagecenter"/>
+        <img src="images/scrolldown.png" alt="Scroll down" class="imagecenter"/>
       </ul>
       </div>
       </div>
