Add CC balance.
yeeted

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <img src="images/banner.png" alt="Javin's banner" class="imagecenter"/>
     <img src="images/Homebanner.png" alt="Home banner" class="homebanner imagecenter"/>
+    <img src="images/balance.png" alt="Wallet Balance" class="homebanner imagecenter"/>
     <img src="images/tposeing.png" alt="Tpose god" class="homebanner imagecenter"/>
     <div class"nav">
       <div class="wrapper">
