--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,10 @@
         <li><a href="https://compcamps.com"> <img src="images/Compcampsbutton.png" </a></li>
         <img src="images/whaticreated.png" alt="What I created" class="imagecenter"/>
         <img src="images/scrolldown.png" alt="Scroll down" class="imagecenter"/>
+        <p>
+        <a href="https://github.com/trollmad3/SodieBoysAttack">
+        <img src="images\sodieboyattack.png" alt="Sodieboy attack" class="imagecenter"/>
+      </a>
       </ul>
       </div>
       </div>
