Add photoshop project.
Also updated projects.

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,7 @@
         <p>
         <a href="https://github.com/trollmad3/SodieBoysAttack">
         <img src="images\sodieboyattack.png" alt="Sodieboy attack" class="imagecenter"/>
+        <img src="images/godjavin.png" alt="Photoshop" class="imagecenter"/>
       </a>
       </ul>
       </div>
