--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Javin's CompCamp Website!</title>
-    <link rel="stylesheet" href="css/styles.css"
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <style>
   ul {
@@ -23,14 +23,13 @@
       <ul>
         <li><a href="index.html"> <img src="images/Homebutton.png"/> </a></li>
         <li><a href="projects.html"> <img src="images/projectbutton.png"/> </a></li>
-        <li><a href="https://compcamps.com"> <img src="images/Compcampsbutton.png" </a></li>
+        <li><img src="images/Compcampsbutton.png"><a href="http://compcamps.com"></a></li>
         <img src="images/whaticreated.png" alt="What I created" class="imagecenter"/>
         <img src="images/scrolldown.png" alt="Scroll down" class="imagecenter"/>
-        <p>
-        <a href="https://github.com/trollmad3/SodieBoysAttack">
-        <img src="images\sodieboyattack.png" alt="Sodieboy attack" class="imagecenter"/>
+
+
+        <li><a href="https://github.com/trollmad3/SodieBoysAttack"> <img src="images\sodieboyattack.png" alt="Sodieboy attack" class="imagecenter" </a></li>
         <img src="images/godjavin.png" alt="Photoshop" class="imagecenter"/>
-      </a>
       </ul>
       </div>
       </div>
