add project images

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,9 @@
 
 
         <li><a href="https://github.com/trollmad3/SodieBoysAttack"> <img src="images\sodieboyattack.png" alt="Sodieboy attack" class="imagecenter" </a></li>
+		<img src="images/uwuthegame.png" alt="uwu the game" class="imagecenter"/>
+		<img src="images/saskartists.png" alt="saskartists" class="imagecenter"/>
+
         <img src="images/godjavin.png" alt="Photoshop" class="imagecenter"/>
       </ul>
       </div>
