--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </ul>
     </div>
     </div>
-    <img src="images/websitedesignismypassion.jpg" alt="website design is my passion" class="homebanner imagecenter"/>
+    <img src="images/websitedesignismypassion.png" alt="website design is my passion" class="homebanner imagecenter"/>
     <img src="images/aboutme.png" alt="About me" class="imagecenter"
     <img src="images/tposeing.png" alt="Tpose god" class="homebanner imagecenter"/>
   </body>
