--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="index.html"> <img src="images/Homebutton.png"/> </a></li>
         <li><a href="projects.html"> <img src="images/projectbutton.png"/> </a></li>
         <li><a href="https://compcamps.com"> <img src="images/Compcampsbutton.png" </a></li>
+		<li><a href="portfolio.html"> <img src="images/whatiworkedon.png"/> </a></li>
       </ul>
     </div>
     </div>
