--- a/portfolio.html
+++ b/portfolio.html
@@ -31,5 +31,6 @@
 		</ul>
 	 <p><font color="red">Now you are probably wondering, why this is not on the projects page.</font></p>
 	 <p><font color="red">The projects page was specifically made for compcamps to show what I made there in the week.</font></p>
+	 <p><font color="red">This page is what I made on github and stuff that is not on github.</font></p>
   <body background="images/spacebackground.png">
 </html> 
