--- a/portfolio.html
+++ b/portfolio.html
@@ -32,5 +32,11 @@
 	 <p><font color="red">Now you are probably wondering, why this is not on the projects page.</font></p>
 	 <p><font color="red">The projects page was specifically made for compcamps to show what I made there in the week.</font></p>
 	 <p><font color="red">This page is what I made on github and stuff that is not on github.</font></p>
+	 <br>
+	 </br>
+	 <section>
+	 <img src="images/portfolio/davidthau.png" align="left">
+	 <p><font color="blue">The first site I worked on was a SaskArtist by the artist named <a href="https://saskartists.ca/artists/dthauberger/">David Thauberger.<br> </a> The <a href="https://github.com/SaskArtists/SaskArtists/issues/342">issue</a> was simple. What had to fixed was a return link to the SaskArtist website.</font></p>
+	 </section>
   <body background="images/spacebackground.png">
 </html> 
