--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,13 @@
 	 </br>
 	 <ul>
 	 <img src="images/portfolio/davidthau.png" align="left">
-	 <p><font color="blue">The first site I worked on was a SaskArtist by the artist named <a href="https://saskartists.ca/artists/dthauberger/">David Thauberger.<br> </a> The <a href="https://github.com/SaskArtists/SaskArtists/issues/342">issue</a> was simple. What had to fixed was a return link to the SaskArtist website.</font></p>
+	 <p><font color="yellow">The first site I worked on was a SaskArtist by the artist named <a href="https://saskartists.ca/artists/dthauberger/">David Thauberger.<br> </a> The <a href="https://github.com/SaskArtists/SaskArtists/issues/342">issue</a> was simple. What had to fixed was a return link to the SaskArtist website.</font></p>
 	 <br>
 	 <br>
 	 </br>
+	 </br>
 	 <img src="images/portfolio/melbolen.png" align="left">
-	 <p><font color="blue">I had to create a slideshow of his artwork. This created a lot of problems because this was my first time makeing any slideshow.</font></p>
+	 <p><font color="yellow">I had to create a slideshow of his artwork. This created a lot of problems because this was my first time makeing any slideshow for a website.</font></p>
 	 </ul>
   <body background="images/spacebackground.png">
 </html> 
