--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,9 @@
 	 </br>
 	 <img src="images/portfolio/melbolen.png" align="left">
 	 <p><font color="yellow">I had to create a slideshow of his artwork. This created a lot of problems because this was my first time makeing any slideshow for a website.</font></p>
+	 <br>
+	 <img src="images/portfolio/junejacobs.png" align="left">
+	 <p><font color="yellow">The <a href="https://github.com/SaskArtists/SaskArtists/issues/365">issue</a> was very easy to resolve. All I had to do was fix the images because they were renamed and not readded to the website.</font></p>
 	 </ul>
   <body background="images/spacebackground.png">
 </html> 
