mouse over to read

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
         <li><a href="projects.html"> <img src="images/projectbutton.png"/> </a></li>
         <li><img src="images/Compcampsbutton.png"><a href="http://compcamps.com"></a></li>
 		</ul>
+	 <p><font color="red">Mouse over to read.</font></p>
 	 <span class="spoiler" >Now you are probably wondering, why this is not on the projects page.<br>
 	 The projects page was specifically made for compcamps to show what I made there in a week.<br>
 	 This page is what I made on github and stuff that is not on github.</span>
