--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html landg="en" dir="ltr">
  <head>
     <meta charset="utf-8">
-    <title>Javin's CompCamp Website!</title>
+    <title>Javin's Website!</title>
     <link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet"> 
   </head>
