--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Javin's CompCamp Website!</title>
+    <title>Javin's  Website!</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <style>
